[gd_scene load_steps=18 format=3 uid="uid://dk3in5cberhsg"]

[ext_resource type="PackedScene" uid="uid://btam5g21aiiqg" path="res://ShipModels/bismark_low_poly2.glb" id="1_3klas"]
[ext_resource type="Script" uid="uid://36hn6giyyldc" path="res://src/ship/Ship.gd" id="2_4pvtd"]
[ext_resource type="PackedScene" uid="uid://5qbpr6jjvoj6" path="res://modules.tscn" id="2_5bir6"]
[ext_resource type="Script" uid="uid://xc16x5l6kqxq" path="res://src/artillary/Guns/Gun.gd" id="3_1wuss"]
[ext_resource type="Resource" uid="uid://f4vy1bfecssd" path="res://src/Ships/Battleship/BB_gun1/BB_gun1.tres" id="4_rb316"]
[ext_resource type="Script" uid="uid://dytt41ol6shn4" path="res://src/artillary/sec_sub_controller.gd" id="5_5tc2e"]
[ext_resource type="Resource" uid="uid://ppinkghgx71y" path="res://src/Ships/Battleship/sec_gun1/sec_gun2.tres" id="6_4ubhj"]
[ext_resource type="Script" uid="uid://dnb0sat2lxj21" path="res://src/Consumable/consumable_item.gd" id="6_id6nr"]
[ext_resource type="Resource" uid="uid://8cp40uc7e88c" path="res://src/Ships/Battleship/sec_gun1/sec_gun1.tres" id="7_jay6y"]
[ext_resource type="Resource" uid="uid://cj43pm5o6aibf" path="res://src/Consumable/DamageControl.tres" id="7_opj4s"]
[ext_resource type="Resource" uid="uid://cmt02tuklbcpb" path="res://src/Consumable/RepairParty.tres" id="8_7aqce"]
[ext_resource type="Resource" uid="uid://cgmx8b43b3tfn" path="res://src/Fire/Fire.tres" id="9_7aqce"]
[ext_resource type="PackedScene" uid="uid://psoivfcd8yg8" path="res://src/ship/wake/wake_emitter.tscn" id="9_dyl6l"]
[ext_resource type="PackedScene" uid="uid://be3y5hstfsrig" path="res://src/Fire/Fire.tscn" id="10_2e51t"]
[ext_resource type="Script" uid="uid://dr7ents37sxlk" path="res://src/ship/Upgrades/upgrade.gd" id="13_5tc2e"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4pvtd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3klas"]
size = Vector3(36, 28.971, 251.893)

[node name="bismark_low_poly2" instance=ExtResource("1_3klas")]
mass = 5.6e+07
physics_material_override = SubResource("PhysicsMaterial_4pvtd")
gravity_scale = 4.0
script = ExtResource("2_4pvtd")
ship_model_glb_path = "uid://btam5g21aiiqg"

[node name="Modules" parent="." index="0" instance=ExtResource("2_5bir6")]

[node name="HPManager" parent="Modules" index="0"]
max_hp = 65000.0

[node name="ArtilleryController" parent="Modules" index="1" node_paths=PackedStringArray("guns")]
params = ExtResource("4_rb316")
guns = [NodePath("../../Hull/380mmTurret_001"), NodePath("../../Hull/380mmTurret"), NodePath("../../Hull/380mmTurret_002"), NodePath("../../Hull/380mmTurret_003")]

[node name="MovementController" parent="Modules" index="2"]
max_speed = 31.0
acceleration_time = 20.0
deceleration_time = 20.0
turning_circle_radius = 500.0
rudder_response_time = 7.0

[node name="SecondaryController" parent="Modules" index="3" node_paths=PackedStringArray("sub_controllers")]
sub_controllers = [NodePath("SecSubController"), NodePath("SecSubController2")]

[node name="SecSubController" type="Node" parent="Modules/SecondaryController" index="0" node_paths=PackedStringArray("guns")]
script = ExtResource("5_5tc2e")
p = ExtResource("7_jay6y")
guns = [NodePath("../../../Hull/150mmTurret"), NodePath("../../../Hull/150mmTurret_001"), NodePath("../../../Hull/150mmTurret_002"), NodePath("../../../Hull/150mmTurret_003"), NodePath("../../../Hull/150mmTurret_004"), NodePath("../../../Hull/150mmTurret_005")]
metadata/_custom_type_script = "uid://dytt41ol6shn4"

[node name="SecSubController2" type="Node" parent="Modules/SecondaryController" index="1" node_paths=PackedStringArray("guns")]
script = ExtResource("5_5tc2e")
p = ExtResource("6_4ubhj")
guns = [NodePath("../../../Hull/105mmTurret"), NodePath("../../../Hull/105mmTurret_001"), NodePath("../../../Hull/105mmTurret_002"), NodePath("../../../Hull/105mmTurret_003"), NodePath("../../../Hull/105mmTurret_004"), NodePath("../../../Hull/105mmTurret_005"), NodePath("../../../Hull/105mmTurret_006"), NodePath("../../../Hull/105mmTurret_007")]
metadata/_custom_type_script = "uid://dytt41ol6shn4"

[node name="ConsumableManager" parent="Modules" index="4"]
equipped_consumables = Array[ExtResource("6_id6nr")]([ExtResource("7_opj4s"), ExtResource("8_7aqce")])

[node name="FireManager" parent="Modules" index="5" node_paths=PackedStringArray("fires")]
params = ExtResource("9_7aqce")
fires = [NodePath("../../FireNodes/Fire"), NodePath("../../FireNodes/Fire2"), NodePath("../../FireNodes/Fire3"), NodePath("../../FireNodes/Fire4")]

[node name="Upgrades" parent="Modules" index="6"]
upgrades = Array[ExtResource("13_5tc2e")]([null, null, null])

[node name="FireNodes" type="Node3D" parent="." index="1"]

[node name="Fire" parent="FireNodes" index="0" instance=ExtResource("10_2e51t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.16089, -84.116)

[node name="Fire2" parent="FireNodes" index="1" instance=ExtResource("10_2e51t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.08068, -26.3775)

[node name="Fire3" parent="FireNodes" index="2" instance=ExtResource("10_2e51t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.21839, 29.8215)

[node name="Fire4" parent="FireNodes" index="3" instance=ExtResource("10_2e51t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.16078, 92.8848)

[node name="105mmTurret" parent="Hull" index="0"]
script = ExtResource("3_1wuss")
min_rotation_angle = 3.36849
max_rotation_angle = 0.0523599

[node name="105mmTurret_001" parent="Hull" index="1"]
script = ExtResource("3_1wuss")
min_rotation_angle = 6.24828
max_rotation_angle = 2.87979

[node name="105mmTurret_002" parent="Hull" index="2"]
script = ExtResource("3_1wuss")
min_rotation_angle = 3.38131
max_rotation_angle = 6.12939

[node name="105mmTurret_003" parent="Hull" index="3"]
script = ExtResource("3_1wuss")
min_rotation_angle = 0.214946
max_rotation_angle = 2.97083

[node name="105mmTurret_004" parent="Hull" index="4"]
script = ExtResource("3_1wuss")
min_rotation_angle = 3.31454
max_rotation_angle = 6.08279

[node name="105mmTurret_005" parent="Hull" index="5"]
script = ExtResource("3_1wuss")
min_rotation_angle = 0.236242
max_rotation_angle = 3.01535

[node name="105mmTurret_006" parent="Hull" index="6"]
script = ExtResource("3_1wuss")
min_rotation_angle = 3.16594
max_rotation_angle = 5.88536

[node name="105mmTurret_007" parent="Hull" index="7"]
script = ExtResource("3_1wuss")
min_rotation_angle = 0.391551
max_rotation_angle = 3.16563

[node name="150mmTurret" parent="Hull" index="14"]
script = ExtResource("3_1wuss")
min_rotation_angle = 3.29867
max_rotation_angle = 0.0

[node name="150mmTurret_001" parent="Hull" index="15"]
script = ExtResource("3_1wuss")
min_rotation_angle = 3.78736
max_rotation_angle = 6.26573

[node name="150mmTurret_002" parent="Hull" index="16"]
script = ExtResource("3_1wuss")
min_rotation_angle = 3.15905
max_rotation_angle = 6.00393

[node name="150mmTurret_003" parent="Hull" index="17"]
script = ExtResource("3_1wuss")
min_rotation_angle = 0.0
max_rotation_angle = 2.54818

[node name="150mmTurret_004" parent="Hull" index="18"]
script = ExtResource("3_1wuss")
min_rotation_angle = 0.0174533
max_rotation_angle = 3.00197

[node name="150mmTurret_005" parent="Hull" index="19"]
script = ExtResource("3_1wuss")
min_rotation_angle = 0.226893

[node name="380mmTurret" parent="Hull" index="20"]
script = ExtResource("3_1wuss")
min_rotation_angle = 3.68264
max_rotation_angle = 2.54818

[node name="380mmTurret_001" parent="Hull" index="21"]
script = ExtResource("3_1wuss")
min_rotation_angle = 3.53257
max_rotation_angle = 2.73764

[node name="380mmTurret_002" parent="Hull" index="22"]
transform = Transform3D(-1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, -0.00826359, 6.31443, 55.6975)
script = ExtResource("3_1wuss")
min_rotation_angle = 0.663225
max_rotation_angle = 5.63741

[node name="380mmTurret_003" parent="Hull" index="23"]
script = ExtResource("3_1wuss")
min_rotation_angle = 0.523599
max_rotation_angle = 5.76474

[node name="StaticBody3D" parent="Hull/Citadel" index="0"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.7234, -2.76855)
shape = SubResource("BoxShape3D_3klas")

[node name="WakeEmitter" parent="." index="4" instance=ExtResource("9_dyl6l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.0254, -3.08133, 76.8465)

[node name="WakeEmitter3" parent="." index="5" instance=ExtResource("9_dyl6l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.081, -122.317)

[node name="WakeEmitter2" parent="." index="6" instance=ExtResource("9_dyl6l")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.1809, -3.08133, 76.8465)

[editable path="Modules"]
